2011-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (AllocateSemaphoreInfo): Enable pthread mutex
	error checking if MAGICK_DEBUG is defined when the code is
	compiled.  This mode helps validate that mutexes are used
	correctly.  No longer enable recursive mutexes since the
	GraphicsMagick logic should be able to operate without this
	assistance.

2011-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (DCM_ReadOffsetTable): Fix wrong cast noticed when
	compiling with LLVM.

2011-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c (LevelImageChannel): Fix documented prototype.
	Problem was reported by Brad Harder.

2011-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (AcquireOneCacheViewPixelInlined): Only use
	image colormap if the image storage class is PseudoClass.
	Eliminates a core dump when the image is in CMYK space.

2011-07-20  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: account for changed typecast of png_get_iCCP
	argument in libpng15 

2011-07-20  Glenn Randers-Pehrson  <glennrp@simple...>

	* configure.ac: look for libpng15, libpng14, libpng12, and libpng
        in that order.

2011-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Update to libpng 1.5.4.

2011-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/docutils-articles.css: Style sheet syntax fixes. Patch by
	Mark Mitchell.

	* scripts/html_fragments.py: Use proper quoting in banner search
	HTML.  Patch by Mark Mitchell.

2011-06-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageType): Fix documentation for enumeration
	names. The types need "Type" as part of the name.  Problem was
	reported by Brad Harder.

2011-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/html_fragments.py (banner_template): HTML banner
	improvements to go along with style-sheet changes.
