@@ -1,3 +1,9 @@
+2011-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/display.c (MagickXMagickCommand): Display 'save' and
+	'print' should display useful error details.  Problem was reported
+	by Brad Harder.
+
 2011-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/semaphore.c (AllocateSemaphoreInfo): Enable pthread mutex
